--- a/erpnext/hr/doctype/medical_insurance_application/medical_insurance_application.json
+++ b/erpnext/hr/doctype/medical_insurance_application/medical_insurance_application.json
@@ -2,6 +2,7 @@
  "allow_copy": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
+ "autoname": "MIA.####", 
  "beta": 0, 
  "creation": "2017-01-01 14:02:08.324179", 
  "custom": 0, 
@@ -86,6 +87,62 @@
    "length": 0, 
    "no_copy": 0, 
    "options": "employee.employee_name", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "nationality", 
+   "fieldtype": "Read Only", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Nationality", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "employee.nationality", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "column_break_5", 
+   "fieldtype": "Column Break", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "length": 0, 
+   "no_copy": 0, 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -190,6 +247,61 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "fieldname": "section_break_9", 
+   "fieldtype": "Section Break", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "get_medical_disclaimer_templete", 
+   "fieldtype": "Button", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Get Medical Disclaimer Templete", 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
    "fieldname": "family_members", 
    "fieldtype": "Table", 
    "hidden": 0, 
@@ -219,17 +331,18 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "attachment", 
-   "fieldtype": "Attach", 
+   "fieldname": "attachments", 
+   "fieldtype": "Table", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Attachment", 
+   "label": "Attachments", 
    "length": 0, 
    "no_copy": 0, 
+   "options": "Medical Insurance Document", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -257,12 +370,40 @@
    "in_standard_filter": 0, 
    "length": 0, 
    "no_copy": 0, 
-   "options": "\u0645\u0644\u0627\u062d\u0638\u0629 : \u0627\u0631\u062c\u0648 \u0627\u0631\u0641\u0627\u0642 \u0635\u0648\u0631\u0629 \u0627\u0644\u062c\u0648\u0627\u0632+ \u0635\u0648\u0631\u0629 \u062a\u0623\u0634\u064a\u0631\u0629 \u0627\u0644\u062f\u062e\u0648\u0644 \u0645\u0648\u0636\u062d\u0627\u064b \u0639\u0644\u064a\u0647\u0627 \u0631\u0642\u0645 \u0627\u0644\u062c\u062f\u0648\u062f.", 
+   "options": "\u0645\u0644\u0627\u062d\u0638\u0629 : \u0627\u0631\u0641\u0627\u0642 \u0635\u0648\u0631\u0647 \u0627\u0644\u0647\u0648\u064a\u0647 \u0627\u0644\u0648\u0637\u0646\u064a\u0629 + \u0635\u0648\u0631\u0647 \u0628\u0637\u0627\u0642\u0647 \u0627\u0644\u0639\u0627\u0626\u0644\u0647 (\u0644\u0644\u0633\u0639\u0648\u062f\u064a)\n<br>\n\u0627\u0631\u0641\u0627\u0642 \u0635\u0648\u0631\u0647 \u0635\u0648\u0631\u0647 \u062c\u0648\u0627\u0632 \u0627\u0644\u0633\u0641\u0631 \u0648 \u0627\u0644\u0625\u0642\u0627\u0645\u0629 + \u0635\u0648\u0631\u0647 \u062a\u0623\u0634\u064a\u0631\u0629 \u0627\u0644\u062f\u062e\u0648\u0644 \u0645\u0648\u0636\u062d\u0627\u064b \u0639\u0644\u064a\u0647\u0627 \u0631\u0642\u0645 \u0627\u0644\u062d\u062f\u0648\u062f (\u0644\u063a\u064a\u0631 \u0627\u0644\u0633\u0639\u0648\u062f\u064a)\n\u062a\u0639\u0628\u0626\u0629 \u0648\u0627\u0631\u0641\u0627\u0642 \u0646\u0645\u0648\u0630\u062c \u0627\u0644\u0625\u0641\u0635\u0627\u062d \u0627\u0644\u0637\u0628\u064a \u0627\u0644\u0645\u0631\u0641\u0642 \u0628\u0639\u062f \u062e\u062a\u0645\u0647\n", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
    "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "amended_from", 
+   "fieldtype": "Link", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Amended From", 
+   "length": 0, 
+   "no_copy": 1, 
+   "options": "Medical Insurance Application", 
+   "permlevel": 0, 
+   "print_hide": 1, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 1, 
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 0, 
@@ -277,11 +418,11 @@
  "image_view": 0, 
  "in_create": 0, 
  "in_dialog": 0, 
- "is_submittable": 0, 
+ "is_submittable": 1, 
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-07-09 16:28:19.392450", 
+ "modified": "2017-08-27 13:01:33.373172", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Medical Insurance Application", 
@@ -303,7 +444,7 @@
    "print": 1, 
    "read": 1, 
    "report": 1, 
-   "role": "All", 
+   "role": "Employee", 
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
@@ -312,7 +453,7 @@
   {
    "amend": 0, 
    "apply_user_permissions": 0, 
-   "cancel": 0, 
+   "cancel": 1, 
    "create": 1, 
    "delete": 1, 
    "email": 1, 
@@ -324,10 +465,52 @@
    "print": 1, 
    "read": 1, 
    "report": 1, 
-   "role": "Administrator", 
+   "role": "HR Specialist", 
    "set_user_permissions": 0, 
    "share": 1, 
-   "submit": 0, 
+   "submit": 1, 
+   "write": 1
+  }, 
+  {
+   "amend": 0, 
+   "apply_user_permissions": 0, 
+   "cancel": 1, 
+   "create": 1, 
+   "delete": 1, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 0, 
+   "is_custom": 0, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "HR Manager", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 1, 
+   "write": 1
+  }, 
+  {
+   "amend": 0, 
+   "apply_user_permissions": 0, 
+   "cancel": 1, 
+   "create": 1, 
+   "delete": 1, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 0, 
+   "is_custom": 0, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "HR User", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 1, 
    "write": 1
   }
  ], 
